spacing fix on smartequip

--- a/style/styles.css
+++ b/style/styles.css
@@ -2972,6 +2972,7 @@ text-align: left;
     grid-row: 4;
     max-width: 50rem;
     text-align: left;
+    padding-top: 3rem;
   }
 
   .the-client-five {
